--- a/package.json
+++ b/package.json
@@ -1,27 +1,8 @@
 {
-    "name": "@lars-reimann/eslint-config",
-    "version": "1.0.0",
-    "description": "Configuration for ESLint",
-    "main": "index.js",
-    "license": "MIT",
-    "keywords": [
-        "eslint",
-        "eslintconfig"
-    ],
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/lars-reimann/eslint-config"
-    },
-    "homepage": "https://github.com/lars-reimann/eslint-config",
+    "name": "eslint-config-root",
+    "version": "0.0.1",
+    "private": true,
     "prettier": "@lars-reimann/prettier-config",
-    "dependencies": {
-        "eslint-config-prettier": "^8.3.0"
-    },
-    "peerDependencies": {
-        "@typescript-eslint/eslint-plugin": "^4.28.5",
-        "@typescript-eslint/parser": "^4.28.5",
-        "eslint": ">= 7"
-    },
     "devDependencies": {
         "@lars-reimann/prettier-config": "*"
     }
