--- a/package.json
+++ b/package.json
@@ -22,16 +22,16 @@
         "@typescript-eslint/eslint-plugin": "^5.36.2",
         "eslint": "^8.23.0",
         "eslint-plugin-import": "^2.26.0",
-        "eslint-plugin-jest": "^27.0.2",
         "eslint-plugin-jsx-a11y": "^6.6.1",
         "eslint-plugin-react": "^7.31.7",
         "eslint-plugin-react-hooks": "^4.6.0",
-        "eslint-plugin-testing-library": "^5.6.2"
+        "eslint-plugin-testing-library": "^5.6.2",
+        "eslint-plugin-vitest": "^0.0.57"
     },
     "prettier": "@lars-reimann/prettier-config",
     "devDependencies": {
         "@lars-reimann/prettier-config": "^5.0.0",
-        "@tsconfig/node16": "^1.0.2",
+        "@tsconfig/node18": "^1.0.1",
         "conventional-changelog-conventionalcommits": "^5.0.0",
         "semantic-release": "^21.0.0"
     },
