--- a/package.json
+++ b/package.json
@@ -19,21 +19,20 @@
         "eslint-config-prettier": "^8.5.0"
     },
     "peerDependencies": {
-        "@typescript-eslint/eslint-plugin": "^5.36.2",
-        "eslint": "^8.23.0",
-        "eslint-plugin-import": "^2.26.0",
-        "eslint-plugin-jest": "^27.0.2",
-        "eslint-plugin-jsx-a11y": "^6.6.1",
-        "eslint-plugin-react": "^7.31.7",
+        "@typescript-eslint/eslint-plugin": "^5.57.0",
+        "eslint": "^8.37.0",
+        "eslint-plugin-import": "^2.27.5",
+        "eslint-plugin-jsx-a11y": "^6.7.1",
+        "eslint-plugin-react": "^7.32.2",
         "eslint-plugin-react-hooks": "^4.6.0",
-        "eslint-plugin-testing-library": "^5.6.2"
+        "eslint-plugin-testing-library": "^5.10.2",
+        "eslint-plugin-vitest": "^0.0.57"
     },
     "prettier": "@lars-reimann/prettier-config",
     "devDependencies": {
         "@lars-reimann/prettier-config": "^5.0.0",
-        "@tsconfig/node16": "^1.0.2",
         "conventional-changelog-conventionalcommits": "^5.0.0",
-        "semantic-release": "^21.0.0"
+        "semantic-release": "^21.0.1"
     },
     "scripts": {
         "lint": "eslint ."
