--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,19 @@
 {
-    "extends": "@tsconfig/node16/tsconfig.json",
+    "$schema": "https://json.schemastore.org/tsconfig",
+    "display": "Node 18",
+
     "include": [".eslintrc.js", "index.js", "release.config.js"],
-    "exclude": ["node_modules"]
+    "exclude": ["node_modules"],
+
+    "compilerOptions": {
+        "lib": ["es2021"],
+        "module": "commonjs",
+        "target": "es2021",
+
+        "strict": true,
+        "esModuleInterop": true,
+        "skipLibCheck": true,
+        "forceConsistentCasingInFileNames": true,
+        "moduleResolution": "node"
+    }
 }
