--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,11 +14,14 @@ jobs:
       pull-requests: write
       id-token: write
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
+      - name: Checkout
+        uses: actions/checkout@v3
         with:
-          node-version: '18.x'
-          registry-url: 'https://registry.npmjs.org'
+          fetch-depth: 0
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: "lts/*"
       - name: Install dependencies
         run: npm ci
       - name: Release
