--- a/packages/svelte/package.json
+++ b/packages/svelte/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@lars-reimann/eslint-config-svelte",
-    "version": "5.2.1",
+    "version": "5.2.2",
     "description": "Configuration for ESLint in Svelte projects",
     "main": "index.cjs",
     "license": "MIT",
@@ -14,9 +14,7 @@
     },
     "homepage": "https://github.com/lars-reimann/eslint-config",
     "dependencies": {
-        "@lars-reimann/eslint-config": ">=5.2.1"
-    },
-    "devDependencies": {
+        "@lars-reimann/eslint-config": ">=5.2.1",
         "eslint-plugin-svelte": "^2.35.1",
         "svelte": "^4.2.10"
     },
