--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,18 +14,24 @@ jobs:
       pull-requests: write
       id-token: write
     steps:
-      - name: Checkout
+      - name: Checkout repository
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - name: Setup Node.js
+          persist-credentials: false
+
+      - name: Use Node.js 20.x
         uses: actions/setup-node@v4
         with:
-          node-version: "lts/*"
+          node-version: '20.x'
+          cache: npm
+          cache-dependency-path: package-lock.json
+
       - name: Install dependencies
         run: npm ci
+
       - name: Release
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: npx semantic-release
+        env:
+          GITHUB_TOKEN: ${{ secrets.PAT || secrets.GITHUB_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
