--- a/package.json
+++ b/package.json
@@ -1,43 +1,14 @@
 {
-    "name": "@lars-reimann/eslint-config",
-    "version": "4.4.0",
-    "description": "Configuration for ESLint",
-    "main": "index.js",
-    "license": "MIT",
-    "keywords": [
-        "eslint",
-        "eslintconfig"
-    ],
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/lars-reimann/eslint-config"
-    },
-    "homepage": "https://github.com/lars-reimann/eslint-config",
-    "dependencies": {
-        "eslint-config-airbnb": "^19.0.4",
-        "eslint-config-airbnb-typescript": "^17.0.0",
-        "eslint-config-prettier": "^9.0.0"
-    },
-    "peerDependencies": {
-        "@typescript-eslint/eslint-plugin": "^6.3.0",
-        "eslint": "^8.46.0",
-        "eslint-plugin-import": "^2.28.0",
-        "eslint-plugin-jsx-a11y": "^6.7.1",
-        "eslint-plugin-react": "^7.33.1",
-        "eslint-plugin-react-hooks": "^4.6.0",
-        "eslint-plugin-testing-library": "^5.11.1",
-        "eslint-plugin-vitest": "^0.2.8"
-    },
-    "prettier": "@lars-reimann/prettier-config",
-    "devDependencies": {
-        "@lars-reimann/prettier-config": "^5.0.0",
-        "conventional-changelog-conventionalcommits": "^7.0.1",
-        "semantic-release": "^23.0.0"
-    },
-    "scripts": {
-        "lint": "eslint ."
-    },
-    "publishConfig": {
-        "provenance": true
-    }
+  "name": "eslint-config",
+  "version": "0.0.0",
+  "private": true,
+  "workspaces": [
+    "packages/*"
+  ],
+  "devDependencies": {
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/npm": "^11.0.2",
+    "conventional-changelog-conventionalcommits": "^7.0.2",
+    "semantic-release": "^23.0.2"
+  }
 }
