--- a/packages/svelte/package.json
+++ b/packages/svelte/package.json
@@ -10,7 +10,7 @@
     ],
     "repository": {
         "type": "git",
-        "url": "https://github.com/lars-reimann/eslint-config"
+        "url": "git+https://github.com/lars-reimann/eslint-config.git"
     },
     "homepage": "https://github.com/lars-reimann/eslint-config",
     "dependencies": {
