--- a/packages/basic/package.json
+++ b/packages/basic/package.json
@@ -14,15 +14,15 @@
     },
     "homepage": "https://github.com/lars-reimann/eslint-config",
     "dependencies": {
+        "@typescript-eslint/eslint-plugin": "^6.21.0",
         "eslint-config-airbnb": "^19.0.4",
         "eslint-config-airbnb-typescript": "^17.0.0",
-        "eslint-config-prettier": "^9.1.0"
-    },
-    "peerDependencies": {
-        "@typescript-eslint/eslint-plugin": "^6.21.0",
-        "eslint": "^8.56.0",
+        "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-import": "^2.29.1",
         "eslint-plugin-vitest": "^0.3.22"
+    },
+    "peerDependencies": {
+        "eslint": "^8.56.0"
     },
     "publishConfig": {
         "provenance": true
