--- a/packages/svelte/package.json
+++ b/packages/svelte/package.json
@@ -18,6 +18,9 @@
         "eslint-plugin-svelte": "^2.35.1",
         "svelte": "^4.2.10"
     },
+    "peerDependencies": {
+        "eslint": "^8.56.0"
+    },
     "publishConfig": {
         "provenance": true
     }
