build: update dependencies

--- a/packages/svelte/package.json
+++ b/packages/svelte/package.json
@@ -14,11 +14,14 @@
     },
     "homepage": "https://github.com/lars-reimann/eslint-config",
     "dependencies": {
-        "@lars-reimann/eslint-config": ">=6.0.1",
+        "@eslint/compat": "^1.1.1",
+        "@eslint/eslintrc": "^3.1.0",
+        "@eslint/js": "^8.57.0",
+        "@lars-reimann/eslint-config": ">=7.4.0",
         "eslint-plugin-svelte": "^2.44.0",
         "svelte": "^4.2.19"
     },
     "peerDependencies": {
-        "eslint": "^8.56.0"
+        "eslint": "^8.57.0"
     }
 }
