--- a/packages/basic/package.json
+++ b/packages/basic/package.json
@@ -14,15 +14,18 @@
     },
     "homepage": "https://github.com/lars-reimann/eslint-config",
     "dependencies": {
+        "@eslint/compat": "^1.1.1",
+        "@eslint/eslintrc": "^3.1.0",
+        "@eslint/js": "^8.57.0",
         "@typescript-eslint/eslint-plugin": "^8.7.0",
         "eslint-config-airbnb": "^19.0.4",
         "eslint-config-airbnb-typescript": "^18.0.0",
         "eslint-config-prettier": "^9.1.0",
-        "eslint-plugin-import": "^2.29.1",
-        "eslint-plugin-vitest": "^0.4.1"
+        "eslint-plugin-import": "^2.30.0",
+        "eslint-plugin-vitest": "^0.5.4"
     },
     "peerDependencies": {
-        "eslint": "^8.56.0"
+        "eslint": "^8.57.0"
     },
     "publishConfig": {
         "provenance": true
