--- a/packages/svelte/package.json
+++ b/packages/svelte/package.json
@@ -2,7 +2,7 @@
     "name": "@lars-reimann/eslint-config-svelte",
     "version": "7.4.0",
     "description": "Configuration for ESLint in Svelte projects",
-    "main": "index.cjs",
+    "main": "index.mjs",
     "license": "MIT",
     "keywords": [
         "eslint",
@@ -19,9 +19,13 @@
         "@eslint/js": "^8.57.0",
         "@lars-reimann/eslint-config": ">=7.4.0",
         "eslint-plugin-svelte": "^2.44.0",
-        "svelte": "^4.2.19"
+        "svelte": "^4.2.19",
+        "svelte-eslint-parser": "^0.41.1"
     },
     "peerDependencies": {
         "eslint": "^8.57.0"
+    },
+    "publishConfig": {
+        "provenance": true
     }
 }
